[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://docs.rs/adler32/"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"
edition = "2018"

exclude = ["/tests/sgx/*"]

[dev-dependencies]
#rand = "0.4"

[dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.1" }

[dependencies.rand]
package = "sgx_rand"
git = "https://github.com/apache/teaclave-sgx-sdk"
optional = true
rev = "v1.1.1"

[dependencies.sgx_tunittest]
git = "https://github.com/apache/teaclave-sgx-sdk"
optional = true
rev = "v1.1.1"

[features]
default = []
testing = ["rand", "sgx_tunittest"]
