[package]
name = "adler32"
version = "1.0.4"
authors = ["Remi Rampin <remirampin@gmail.com>"]
description = "Minimal Adler32 implementation for Rust."
documentation = "https://docs.rs/adler32/"
repository = "https://github.com/remram44/adler32-rs"
readme = "README.md"
keywords = ["adler32", "hash", "rolling"]
license = "Zlib"
edition = "2018"

exclude = ["/tests/sgx/*"]

[dev-dependencies]
#rand = "0.4"

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.rand]
package     = "sgx_rand"
git         = "https://github.com/apache/teaclave-sgx-sdk"
optional    = true
rev         = "v1.1.2"

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/sammyne/teaclave-testing"
optional    = true

[features]
default = []
with-testing = ["inventory", "rand", "testing"]
